Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
                         <li><a href='diff_USB_energy_refactor.html'>Unified diff core:dev vs beta:origin/USB_energy_refactor</a></li>
 
+                        <li><a href='diff_add_climate_tests.html'>Unified diff core:dev vs beta:origin/add_climate_tests</a></li>
+
+                        <li><a href='diff_add_pw_notification_test.html'>Unified diff core:dev vs beta:origin/add_pw_notification_test</a></li>
+
                         <li><a href='diff_add_typing.html'>Unified diff core:dev vs beta:origin/add_typing</a></li>
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
